Bug 248657 - Selecting a filter doesn't apply the filter
Summary: Selecting a filter doesn't apply the filter
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.2
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
: 259432 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-22 04:50 UTC by Robby Stephenson
Modified: 2010-12-11 21:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2010-08-22 04:50:05 UTC
Version:           2.2 (using KDE 4.4.4) 
OS:                Linux

In older versions of Tellico, clicking a filter on the left would apply the filter to the collection. That functionality should be restored.

Original reported against opensuse at
https://bugzilla.novell.com/show_bug.cgi?id=621477

Reproducible: Always
Comment 1 Robby Stephenson 2010-08-22 04:59:39 UTC
SVN commit 1166507 by rstephenson:

Fixed regression bug in Tellico filter view. Selecting a filter
should apply the filter so it is available for printing and reports.

BUG:248657



 M  +4 -0      ChangeLog  
 M  +14 -0     src/filterview.cpp  
 M  +3 -0      src/filterview.h  
 M  +6 -6      src/mainwindow.cpp  
 M  +1 -1      src/mainwindow.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1166507
Comment 2 pete_herworth 2010-09-14 15:03:54 UTC
I have version 2.3-5.1 in opensuse 11.3 with KDE 4.5.1 and my saved filters still do not work for generating reports. I have to create the filter from scratch each time I want to print a filtered list.
I use opensuse 64bit.
Comment 3 Robby Stephenson 2010-09-17 15:46:24 UTC
(In reply to comment #2)
> I have version 2.3-5.1 in opensuse 11.3 with KDE 4.5.1 and my saved filters
> still do not work for generating reports. I have to create the filter from
> scratch each time I want to print a filtered list.

You'll notice that the bug was fixed on 8/22. Tellico 2.3 came out on 8/8.  So there hasn't been a release with this fix yet. I plan to try to have the next release out within a month or so.
Comment 4 Robby Stephenson 2010-12-11 21:12:38 UTC
*** Bug 259432 has been marked as a duplicate of this bug. ***