Fixed regression bug in Tellico filter view. Selecting a filter should apply the filter so it is available for printing and reports.

BUG:248657


svn path=/trunk/extragear/office/tellico/; revision=1166507