src/mainwindow.h
@@ -420,6 +420,7 @@ private slots:
    * text is interpreted as a regexp.
    */
   void slotUpdateFilter();
+  void slotUpdateFilter(Tellico::FilterPtr filter);
   /**
    * Updates the collection toolbar.
    */
@@ -469,7 +470,6 @@ private slots:
    */
   void slotFilterLabelActivated();
   void slotClearFilter();
-  void slotClearFilterNow();
   void slotRenameCollection();
   void slotImageLocationChanged();
 
